--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="top">
         <h1>Send Me A Message!<h1>
-        <p>Hi there, feel free to leave me a message (Name and Message is required, Email is optional)
+        <p>Hello there! Feel free to leave me a message (Name and Message is required, Email is optional)
         </p>
     </div>
     <div class="bottom">
