added proof image and removed formspree link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p>
     </div>
     <div class="bottom">
-        <form action="https://formspree.io/f/xzbyzpwk" method="post" id="form">
+        <form action="your-email-sending-service" method="post" id="form">
             <label for="name" class="label">Your Name</label>
             <input name ="Name" id="name" type="text" required>
             <label for="email" class="label">Your Email</label>
